--- a/static/index.html
+++ b/static/index.html
@@ -10,9 +10,9 @@
 <body>
 <div class="container">
     <h1>Date Input Form</h1>
-    <form action=/post_date method=get>
-        <label for="date">Start Date:</label>
-        <input type="date" id="date" name="date" required>
+    <form action="/date" method=get>
+        <label for="neo_search">Start Date:</label>
+        <input type="date" id="neo_search" name="neo_search" required>
         <button type="submit">Submit</button>
     </form>
     <h2>API Response:</h2>
