--- a/static/NEO_feed.html
+++ b/static/NEO_feed.html
@@ -3,36 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../static/style.css">
     <title>NEOs</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-        }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin: 20px 0;
-        }
-
-        th, td {
-            padding: 10px;
-            text-align: left;
-            border-bottom: 1px solid #ddd;
-        }
-
-        th {
-            background-color: #f2f2f2;
-        }
-
-        .hazardous {
-            color: red;
-        }
-
-        .non-hazardous {
-            color: green;
-        }
-    </style>
 </head>
 <body>
 <h1>Near Earth Objects</h1>
