--- a/static/NEO_lookup.html
+++ b/static/NEO_lookup.html
@@ -1,77 +1,11 @@
-<!--<!DOCTYPE html>-->
-<!--<html lang="en">-->
-<!--<head>-->
-<!--    <style>-->
-<!--        body {-->
-<!--            font-family: Arial, sans-serif;-->
-<!--        }-->
-
-<!--        table {-->
-<!--            width: 100%;-->
-<!--            border-collapse: collapse;-->
-<!--            margin: 20px 0;-->
-<!--        }-->
-
-<!--        th, td {-->
-<!--            padding: 10px;-->
-<!--            text-align: left;-->
-<!--            border-bottom: 1px solid #ddd;-->
-<!--        }-->
-
-<!--        th {-->
-<!--            background-color: #f2f2f2;-->
-<!--        }-->
-
-<!--        .hazardous {-->
-<!--            color: red;-->
-<!--        }-->
-
-<!--        .non-hazardous {-->
-<!--            color: green;-->
-<!--        }-->
-<!--    </style>-->
-<!--    <meta charset="UTF-8">-->
-<!--    <title>{{neo_name}}</title>-->
-<!--</head>-->
-<!--<body>-->
-
-<!--</body>-->
-<!--</html>-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Asteroid Approach Data</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-        }
+    <link rel="stylesheet" href="../static/style.css">
 
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin: 20px 0;
-        }
-
-        th, td {
-            padding: 10px;
-            text-align: left;
-            border-bottom: 1px solid #ddd;
-        }
-
-        th {
-            background-color: #f2f2f2;
-        }
-
-        .hazardous {
-            color: red;
-        }
-
-        .non-hazardous {
-            color: green;
-        }
-    </style>
 </head>
 <body>
 <div>
@@ -92,7 +26,7 @@
         <tbody>
         {{#each close_approach}}
         <tr>
-            <td>{{date}}</td>
+            <td><a href="/date?neo_search={{date}}" style="cursor:pointer">{{date}}</a></td>
             <td>{{orbiting_body}}</td>
             <td>{{miss_distance}}</td>
             <td>{{velocity}}</td>
