--- a/static/NEO_feed.html
+++ b/static/NEO_feed.html
@@ -22,7 +22,7 @@
     <tbody>
     {{#each neos}}
     <tr>
-        <td> <a href={{link}} style="cursor:pointer">{{name}}</a></td>
+        <td> <a href="/neo/{{reference_id}}" style="cursor:pointer">{{name}}</a></td>
         <td>{{size}}</td>
         <td>{{velocity}}</td>
         <td>{{distance}}</td>
