Add css and convert numbers that are json strings to be f64 for easier rounding and counting.

--- a/static/NEO_feed.html
+++ b/static/NEO_feed.html
@@ -7,12 +7,13 @@
     <title>NEOs</title>
 </head>
 <body>
+<a href="/">Home</a>
 <h1>Near Earth Objects</h1>
 <table>
     <thead>
     <tr>
         <th>Name</th>
-        <th>Size (km)</th>
+        <th>Size (m)</th>
         <th>Velocity at close approach (kph)</th>
         <th>Distance at close approach (km)</th>
         <th>Time of closest approach</th>
